# Myro

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Doxyfile  README.md  dependencies.lua  premake5.lua
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
Myro/: CMakeLists.txt  premake5.lua
Myro-Examples/: CMakeLists.txt  premake5.lua  testfile.flac
Myro-Examples/assets/: spx_test.spx
Myro-Examples/src/: main.cpp
Myro/include/audio/: audio_capture.h  audio_engine.h  audio_file_format.h  audio_source.h  audio_state.h  listener.h
Myro/include/audio/encoders/: flac_encoder.h  iencoder.h  mp3_encoder.h  opus_encoder.h  speex_encoder.h  vorbis_encoder.h
Myro/include/audio/loaders/: flac_loader.h  mp3_loader.h  ogg_loader.h  opus_loader.h  speex_loader.h  wav_loader.h
Myro/include/core/: buffer.h  log.h  thread_pool.h
Myro/include/math/: vec3.h
Myro/include/utility/: formatter.h
Myro/src/: myro.h
Myro/src/audio/: audio_capture.cpp  audio_capture.h  audio_effect.cpp  audio_effect.h  audio_engine.cpp  audio_engine.h  audio_file_format.cpp  audio_file_format.h  audio_filter.cpp  audio_filter.h  audio_source.cpp  audio_source.h  audio_state.h  listener.cpp  listener.h
Myro/src/audio/detail/: audio_data.h  detail.cpp  detail.h  openal_backend.cpp  openal_backend.h
Myro/src/audio/encoders/: flac_encoder.cpp  flac_encoder.h  iencoder.h  mp3_encoder.cpp  mp3_encoder.h  opus_encoder.cpp  opus_encoder.h  speex_encoder.cpp  speex_encoder.h  vorbis_encoder.cpp  vorbis_encoder.h  wav_encoder.cpp  wav_encoder.h
Myro/src/audio/loaders/: flac_loader.cpp  flac_loader.h  mp3_loader.cpp  mp3_loader.h  ogg_loader.cpp  ogg_loader.h  opus_loader.cpp  opus_loader.h  speex_loader.cpp  speex_loader.h  wav_loader.cpp  wav_loader.h
Myro/src/core/: base.h  buffer.h  log.cpp  log.h  raw_buffer.h  thread_pool.h  timestamp.h
Myro/src/internal/: audio_data.h  detail.cpp  openal_backend.cpp
Myro/src/math/: vec2.cpp  vec2.h  vec2.inl  vec3.cpp  vec3.h  vec3.inl
Myro/src/util/: formatter.h
docs/: api_reference.md  architecture.md
scripts/: BuildEngine.bat  BuildEngine.sh  GenerateDocs.bat  GenerateDocs.sh  GenerateProject.bat  GenerateProject.sh
